<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.shoedetails.ShoeDetailsViewModel" />

    </data>
<!-- I've chosen constraint layout for this screen because using linear layout would result in nesting views.-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".shoedetails.ShoeDetailsFragment">

        <TextView
            android:id="@+id/fragment_shoe_details_tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_shoe_details_name"
            app:layout_constraintBottom_toTopOf="@id/fragment_shoe_details_et_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fragment_shoe_details_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.name}"
            app:layout_constraintBottom_toTopOf="@id/fragment_shoe_details_tv_company"
            app:layout_constraintTop_toBottomOf="@id/fragment_shoe_details_tv_name" />

        <TextView
            android:id="@+id/fragment_shoe_details_tv_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_shoe_details_company"
            app:layout_constraintBottom_toTopOf="@id/fragment_shoe_details_et_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_shoe_details_et_company" />

        <EditText
            android:id="@+id/fragment_shoe_details_et_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.manufacturer}"
            app:layout_constraintBottom_toTopOf="@id/fragment_shoe_details_tv_size"
            app:layout_constraintTop_toBottomOf="@id/fragment_shoe_details_tv_company" />

        <TextView
            android:id="@+id/fragment_shoe_details_tv_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_shoe_details_size"
            app:layout_constraintBottom_toTopOf="@id/fragment_shoe_details_et_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_shoe_details_et_company" />

        <EditText
            android:id="@+id/fragment_shoe_details_et_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@={viewModel.size}"
            app:layout_constraintBottom_toTopOf="@id/fragment_shoe_details_tv_size"
            app:layout_constraintTop_toBottomOf="@id/fragment_shoe_details_tv_size" />

        <TextView
            android:id="@+id/fragment_shoe_details_tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_shoe_details_desc"
            app:layout_constraintTop_toBottomOf="@id/fragment_shoe_details_et_size"
            app:layout_constraintBottom_toTopOf="@id/fragment_shoe_details_et_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/fragment_shoe_details_et_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.description}"
            app:layout_constraintTop_toBottomOf="@id/fragment_shoe_details_tv_desc" />

        <Button
            android:id="@+id/fragment_shoe_details_bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_shoe_detail_bt_save"
            android:onClick="@{()->viewModel.onSave()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_shoe_details_bt_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_shoe_details_tv_desc" />

        <Button
            android:id="@+id/fragment_shoe_details_bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_shoe_details_bt_cancel"
            android:onClick="@{()->viewModel.onCancel()}"
            app:layout_constraintBottom_toBottomOf="@id/fragment_shoe_details_bt_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_shoe_details_bt_save"
            app:layout_constraintTop_toTopOf="@id/fragment_shoe_details_bt_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>